test/com/facebook/buck/parser/testdata/syntax_error/error/BUCK.fixture
java_library(name='err')
crash!
